add: ヘッダーを設定する機能追加

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,8 @@
 // app global css in SCSS form
+
+
+.bg {
+    background-image: url("../assets/bg.jpg");
+    background-repeat: repeat;
+    background-size: 100%;
+}
